# find-the-dog-processing-service-1

./: Dockerfile  README.md  docker-compose.yml
image-processing-service/: pyproject.toml
image-processing-service/image_processing_service/: image_processor.py  kafka_consumer.py  processing_service.py
image-processing-service/image_processing_service/kafka_module/: kafka_handler.py
image-processing-service/image_processing_service/processing_module/: black_white_image_processor.py  dog_detection_image_processor.py  image_processor.py
src/: model_initialisation.py  processing_service.py
src/kafka_module/: kafka_handler.py
