[tool.poetry]
name = "image-processing-service"
version = "0.1.0"
description = ""
authors = ["maver01 <matteo.sabadin4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.4.0"
kafka-python = "^2.0.2"
tqdm = "^4.66.5"
torch = "^2.4.1"
torchvision = "^0.19.1"
transformers = "^4.44.2"
prometheus-client = "^0.21.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
